--- a/app/templates/components/test-table.hbs
+++ b/app/templates/components/test-table.hbs
@@ -1,5 +1,4 @@
 <EmberTable as |t|>
-  <t.head @columns={{columns}} />
-  <t.body @rows={{rows}} />
+    <t.head @columns={{columns}} />
+    <t.body @rows={{model}}/>
 </EmberTable>
-{{yield}}
